callstats/callstats_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: callstats
  namespace: callstats
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      vcs: callstats
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        vcs: callstats
    spec:
      containers:
        - name: callstats
          image: visibacontainers.azurecr.io/visiba/callstats:80701
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: 250m
              memory: 250Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: visiba-registry
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
