callstats/callstats_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: callstats
  namespace: callstats
spec:
  selector:
    vcs: callstats
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
